# lliurex-classroom-actions

./: CMakeLists.txt  llx-classroom-actions.desktop
debian/: changelog  control  copyright  lliurex-classroom-actions-epoptes-server.install  lliurex-classroom-actions-epoptes-server.postinst  lliurex-classroom-actions-epoptes.postinst  lliurex-classroom-actions.dirs  lliurex-classroom-actions.install  rules
lliurex-classroom-actions-epoptes-server/etc/n4d/conf.d/: NecosLiteServer
lliurex-classroom-actions-epoptes-server/usr/share/lliurex-classroom-actions/epoptes/: epoptes-cli
lliurex-classroom-actions-epoptes-server/usr/share/n4d/python-plugins/: NecosLiteServer.py
lliurex-classroom-actions-epoptes/etc/n4d/conf.d/: NecosLiteServer
lliurex-classroom-actions-epoptes/usr/share/lliurex-classroom-actions/actions/: epoptes-lock-screen.desktop  epoptes-logout.desktop  epoptes-reboot.desktop  epoptes-shutdown.desktop  epoptes-unlock-screen.desktop
lliurex-classroom-actions-epoptes/usr/share/lliurex-classroom-actions/epoptes/: epoptes-cli  epoptes-manager
lliurex-classroom-actions-epoptes/usr/share/n4d/python-plugins/: NecosLiteServer.py
src/: CMakeLists.txt  classroomaction.cpp  classroomaction.hpp  controlwindow.cpp  controlwindow.hpp  main.cpp  util.hpp
